chore(README.md): :wrench: adiciona info de configuração inicial e troubleshooting